fixed stupid header issues. now it should always align

--- a/frontend/css/site.css
+++ b/frontend/css/site.css
@@ -38,47 +38,44 @@
 	color: black;
 }
 
-#statusspinner {
-  display: inline;
-  font-weight: normal; 
-  font-style: normal;
-  line-height: normal;
-  font-size: 1.4em;
-  font-family: 'Pictos', sans-serif;
+#title {
+  float: left;
+  padding-right:5px;
 }
-#errormsg {
-  position: absolute;
+#statusspinner {
+  padding-top: 3px;
+  width: 15px;
+  padding-right: 5px;
+  float:left;
+  font-weight: normal; font-style: normal; line-height: normal; font-family: 'Pictos', sans-serif;
+  font-size: 1.4em;
+}
+.msgbox {
   float: left;
   display: block;
-  top: 15px;
-  left: 205px;
-  color: #D8000C;
-  background: #FFBABA;
   height: 15px;
   padding-left: 5px;
   padding-right: 5px;
   border: 1px solid;
+  
+}
+.pictosspinner {
+  padding-top: 15px;
+}
+#errormsg {
+  color: #D8000C;
+  background: #FFBABA;
 }
 #infomsg {
-  position: absolute;
-  float: left;
-  display: block;
-  top: 15px;
-  left: 205px;
-  border: 1px solid;
-  background-repeat: no-repeat;
-  background-position: 10px center;
   color: #4F8A10;
-  background-color: #DFF2BF;
-  padding-left: 5px;
-  padding-right: 5px;
+  background: #DFF2BF;
 }
 /* Typography and Color */
 
 html { font-size:100.01%; }
 body { line-height: 1.25; font-size: 75%; color: #222; background: #fff; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
 h1,h2,h3,h4,h5,h6 { font-weight: normal; color: #111; }
-h1 { font-size: 1.9em; line-height: 1; margin-bottom: 0.5em; font-variant: small-caps; display: inline;}
+h1 { font-size: 1.5em; line-height: 1; margin-bottom: 0.5em; display: inline;}
 h2 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
 h3 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
 h4 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
